--- a/urxvt/TODO
+++ b/urxvt/TODO
@@ -1,3 +1,5 @@
 \- add X option to disable mouse reporting, or to make it only happen when "shift" is pressed (opposite to current behavior)
 
     - figure out how to give mouseOnShift X resource a "true" default
+
+    - can we have the mousewheel slipwheel feature work also when shift is depressed
