--- a/urxvt/TODO
+++ b/urxvt/TODO
@@ -3,3 +3,5 @@
     - figure out how to give mouseOnShift X resource a "true" default
 
     - can we have the mousewheel slipwheel feature work also when shift is depressed
+
+- change autocomplete-all-the-things to recognize substrings
